--- a/src/main/resources/templates/shiyan/lookTest.html
+++ b/src/main/resources/templates/shiyan/lookTest.html
@@ -27,7 +27,7 @@
 				<a class="layui-btn layui-btn-sm" href="/shiyan/addQuest">新建</a>
 				<a class="layui-btn layui-btn-sm layui-btn-primary" href="/expmodel/moduleList">返回</a><br>
 <!--				<a class="layui-btn layui-btn-sm layui-btn-primary" href="/shiyan/excelIn">Excel导入</a>-->
-
+				<a href="/shiyan/downloadTemplate" class="layui-btn layui-btn-sm">下载模板</a>
 				<form class="layui-form-item" th:action="@{/shiyan/excelIn}" th:method="post" enctype="multipart/form-data">
 					<i class="layui-icon layui-icon-upload"></i>
 					<label class="layui-form-label">Excel导入:</label>
